<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/tv_tables_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_add"
            android:text="@string/table"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m" />

        <TextView
            android:id="@+id/tv_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/group_all"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title_bar">

        <RelativeLayout
            android:id="@+id/rl_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_countKeyboard">

            <ListView
                android:id="@+id/lv_dishes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/ll_dish_total"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@color/black"
                android:dividerHeight="1dp"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none"></ListView>

            <RelativeLayout
                android:id="@+id/ll_dish_total"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentBottom="true"
                android:background="@color/gray">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_item_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/item_count"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />

                    <TextView
                        android:id="@+id/tv_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/subtotal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />

                    <TextView
                        android:id="@+id/tv_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/discount_"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />

                    <TextView
                        android:id="@+id/tv_taxes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/taxes"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />

                    <TextView
                        android:id="@+id/tv_promotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/taxes"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />


                    <TextView
                        android:id="@+id/tv_grand_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/grand_total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_place_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:text="@string/place_order"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_bill_action"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/btn_reprint_kot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:text="@string/reprint"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />


                    <Button
                        android:id="@+id/btn_print_bill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:text="@string/print"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />


                    <Button
                        android:id="@+id/btn_get_bill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/get_bill"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_m" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_countKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/background_dark"
            android:gravity="center">

            <com.alfredwaiter.view.MoneyKeyboard
                android:id="@+id/countKeyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>